# mlxin

./: .gitignore  CMakeLists.txt  README.md  bindings.cpp  compare.py  file.cpp  file.h  image.cpp  image.h  main.cpp  pyproject.toml  setup.py  test.py
tests/: compare.py
