[build-system]
requires = ["setuptools >= 61.0", "mlx"]
build-backend = "setuptools.build_meta"

[project]
name = "mlxin-data"
version = "0.0.2"
readme = "README.md"
keywords = ["mlx", "data", "png", "jpeg"]
dependencies = [
    "mlx"
]
requires-python = ">= 3.8"
authors = [
  {name = "Diogo Da Cruz", email = "diogodacruz.dev@gmail.com"},
]